[package]
name = "coruscate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "link-dead-code=on"]

[dependencies]
chrono = "0.4.38"
magnus = { git = "https://github.com/matsadler/magnus", features = ["rb-sys"] }
memoize = "0.4.2"
rb-sys = { version = "0.9.56", default-features = false, features = ["ruby-static"] }

# magnus = { version = "0.6.3", features = ["rb-sys", "ruby-static"] }