[package]
name = "coruscate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "link-dead-code=on"]

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
magnus = { git = "https://github.com/matsadler/magnus", features = ["rb-sys"] }
memoize = "0.4.2"
parking_lot = "0.12.3"
rayon = "1.10"
rb-sys = { version = "0.9.56", default-features = false, features = ["ruby-static"] }
serde = "1.0.203"
serde_json = "1.0.117"

# magnus = { version = "0.6.3", features = ["rb-sys", "ruby-static"] }