[package]
name = "reprise"
version = "0.1.3"
edition = "2021"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "link-dead-code=on"]

[features]
embed = ["magnus/embed"]
ruby-api = []

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
enum_dispatch = "0.3.13"
jiff = "0.1.0"
magnus = { version = "0.7.1", features = ["rb-sys"] }
memoize = "0.4.2"
parking_lot = "0.12.3"
rayon = "1.10"
rb-sys = { version = "*", default-features = false, features = ["stable-api-compiled-fallback"] }
serde = "1.0.203"
serde_json = "1.0.117"

[build-dependencies]
rb-sys-env = "0.1.2"

[dev-dependencies]
rb-sys-env = { version = "0.1" }
rb-sys-test-helpers = { version = "0.2" }
